--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,5 +1,5 @@
 <!-- body -->
-<div class='container'>
+<div class="container">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">馆藏书目检索</h4>
@@ -30,15 +30,6 @@
           </div><!-- /input-group -->
         </div><!-- /.col-lg-6 -->
       </div><!-- /.row -->
-      <div class="row search-box-2">
-        <div id="radioselect" class='col-lg-6 col-lg-offset-3 '>
-          <input type='radio' name="kind" id="1" value="all" checked="checked"/><label for="1">所有书刊</label>
-          <input type='radio' name="kind" id="2" value="chinese"/><label for="2">中文图书</label>
-          <input type='radio' name="kind" id="3" value="eng"/><label for="3">西文图书</label>
-          <input type='radio' name="kind" id="4" value="chinmaga"/><label for="4">中文期刊</label>
-          <input type='radio' name="kind" id="5" value="engmaga"/><label for="5">西文期刊</label>
-        </div>
-      </div>
     </div>
   </div>
 </div>
