--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,30 +1,26 @@
 <!-- 登录页 -->
 <div class='container'>
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title text-center">登录</h4>
-    </div>
-    <div class="panel-body">
-      <div class="row Login-box">
+    <h4 class="panel-title text-center">登录</h4>
+    <div class="row Login-box">
         <div class="col-lg-4 col-lg-offset-4">
-          <form action="/login" method="POST" class="form-signin" role="form">
-            <input type="text" class="form-control" name="username" placeholder="学号/工号" required="" autofocus="true">
-            <input style="margin-top:10px;" type="password" class="form-control" name="password" placeholder="密码" required="">
-            <input id="referer" type="hidden" name="referer">
-            <script type="text/javascript">
-              console.log(document.referrer);
-              var referer=document.getElementById('referer');
-              referer.setAttribute('value',document.referrer);
-            </script>
-            <div class="checkbox">
-              <label>
-                <input type="checkbox" value="remember-me">记住密码
-              </label>
-            </div>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
-          </form>
+            <form action="/login" method="POST" class="form-signin" role="form">
+                <input type="text" class="form-control" name="username" placeholder="用户名" required
+                       autofocus="true" autocomplete="off">
+                <input style="margin-top:10px;" type="password" class="form-control" name="password" placeholder="密码"
+                       required>
+                <!--<input id="referer" type="hidden" name="referer">-->
+                <!--<script type="text/javascript">-->
+                    <!--console.log(document.referrer);-->
+                    <!--var referer = document.getElementById('referer');-->
+                    <!--referer.setAttribute('value', document.referrer);-->
+                <!--</script>-->
+                <!--<div class="checkbox">-->
+                    <!--<label>-->
+                        <!--<input type="checkbox" value="remember-me">记住密码-->
+                    <!--</label>-->
+                <!--</div>-->
+                <input class="btn btn-primary btn-block" style="margin-top:10px;" type="submit" value="登录">
+            </form>
         </div>
-      </div>
     </div>
-  </div>
 </div>
