--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -14,21 +14,24 @@
 <!-- 公共头部 -->
 <div class="container">
     <nav class="navbar navbar-light">
-        <a class="navbar-brand" href="#">物流管理信息系统</a>
+        <a class="navbar-brand" href="/">物流管理信息系统</a>
         <ul class="nav navbar-nav float-xs-right">
             {{#if user}}
                 <li class="nav-item">
-                    <a class="nav-link" href="/mylib/myborrow">{{user.name}}</a>
+                    <a class="nav-link" href="/admin/user">{{user.name}}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/loginOut">退出</a>
+                    <a class="nav-link" href="/logout">退出</a>
                 </li>
             {{else}}
                 <li class="nav-item">
                     <a class="nav-link" href="/login">登录</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="">后台管理</a>
+                    <a class="nav-link" href="/register">注册</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin">后台管理</a>
                 </li>
             {{/if}}
         </ul>
