--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,21 +4,10 @@
     <div class="row Login-box">
         <div class="col-lg-4 col-lg-offset-4">
             <form action="/login" method="POST" class="form-signin" role="form">
-                <input type="text" class="form-control" name="username" placeholder="用户名" required
+                <input type="text" class="form-control" name="phone" placeholder="手机号" required
                        autofocus="true" autocomplete="off">
                 <input style="margin-top:10px;" type="password" class="form-control" name="password" placeholder="密码"
                        required>
-                <!--<input id="referer" type="hidden" name="referer">-->
-                <!--<script type="text/javascript">-->
-                    <!--console.log(document.referrer);-->
-                    <!--var referer = document.getElementById('referer');-->
-                    <!--referer.setAttribute('value', document.referrer);-->
-                <!--</script>-->
-                <!--<div class="checkbox">-->
-                    <!--<label>-->
-                        <!--<input type="checkbox" value="remember-me">记住密码-->
-                    <!--</label>-->
-                <!--</div>-->
                 <input class="btn btn-primary btn-block" style="margin-top:10px;" type="submit" value="登录">
             </form>
         </div>
