--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -1,35 +1,13 @@
 <!-- body -->
 <div class="container">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">馆藏书目检索</h4>
-    </div>
-    <div class="panel-body">
-      <div class="row search-box">
-        <div class="col-lg-1 col-lg-offset-3">
-          <div id="dropdown1" class="dropdown">
-            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
-              <span class="placeholder">图书名</span>
-              <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" role="menu">
-              <li value="0"><a>图书名</a></li>
-              <li value="1"><a>责任者</a></li>
-              <li value="2"><a>主题者</a></li>
-              <li value="3"><a>索书号</a></li>
-              <li value="4"><a>出版社</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-lg-5">
-          <div class="input-group">
-            <input id="content" type="text" class="form-control">
-            <span class="input-group-btn">
-              <button id="submit" class="btn btn-default" type="button">GO！</button>
+    <div class="row search-box">
+        <div class="col-lg-8">
+            <div class="input-group">
+                <input id="content" type="text" class="form-control" placeholder="快递单号查询">
+                <span class="input-group-btn">
+              <button id="submit" class="btn btn-default" type="button">搜索</button>
             </span>
-          </div><!-- /input-group -->
-        </div><!-- /.col-lg-6 -->
-      </div><!-- /.row -->
+            </div>
+        </div>
     </div>
-  </div>
 </div>
