--- a/views/error.handlebars
+++ b/views/error.handlebars
@@ -1,4 +1,4 @@
-<div class='container'>
+<div class="container">
   <div class="alert alert-danger" role="alert">
     <h3>Message:{{message}}</h3>
     <h3>{{error}}</h3>
