--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,7 @@
 <!-- 登录页 -->
-<div class='container'>
+<div class="container">
+    {{>header}}
+    {{>alert}}
     <h4 class="panel-title text-center">登录</h4>
     <div class="row Login-box">
         <div class="col-lg-4 col-lg-offset-4">
