--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,5 +1,7 @@
 <!-- 登录页 -->
 <div class="container">
+    {{>header}}
+    {{>alert}}
     <h4 class="panel-title text-center">注册</h4>
     <div class="row Login-box">
         <div class="col-lg-4">
