--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -1,4 +1,14 @@
 <div class="container">
     {{>header}}
     {{>alert}}
+    <div class="jumbotron">
+        <h1 class="display-3">管理后台</h1>
+        <!--<p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>-->
+        <hr class="my-2">
+        <p class="lead">
+            <a class="btn btn-primary btn-lg" href="/admin/user" role="button">更新资料</a>
+            <a class="btn btn-primary btn-lg" href="/admin/publish" role="button">发布新物流</a>
+            <a class="btn btn-primary btn-lg" href="/admin/update" role="button">更新物流</a>
+        </p>
+    </div>
 </div>
