--- a/views/error.handlebars
+++ b/views/error.handlebars
@@ -1,6 +1,8 @@
 <div class="container">
-  <div class="alert alert-danger" role="alert">
-    <h3>Message:{{message}}</h3>
-    <h3>{{error}}</h3>
-  </div>
+    {{>header}}
+    {{>alert}}
+    <div class="alert alert-danger" role="alert">
+        <h3>Message:{{message}}</h3>
+        <h3>{{error}}</h3>
+    </div>
 </div>
