--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,16 +2,20 @@
 <div class="container">
     {{>header}}
     {{>alert}}
-    <h4 class="panel-title text-center">登录</h4>
-    <div class="row Login-box">
-        <div class="col-lg-4 col-lg-offset-4">
-            <form action="/login" method="POST" class="form-signin" role="form">
+    <div class="row login-box">
+        <div class="login col-lg-4 col-md-6 col-sm-8 col-xs-10">
+            <h4 class="login-header text-center">登录</h4>
+            <form action="/login" method="POST" class="login-body" role="form">
                 <input type="text" class="form-control" name="phone" placeholder="手机号" required
-                       autofocus="true" autocomplete="off">
-                <input style="margin-top:10px;" type="password" class="form-control" name="password" placeholder="密码"
+                       autofocus="true" autocomplete="off" maxlength="11">
+                <input type="password" class="form-control" name="password" placeholder="密码"
                        required>
-                <input class="btn btn-primary btn-block" style="margin-top:10px;" type="submit" value="登录">
+                <input class="btn btn-primary btn-block" type="submit" value="完成">
+                <a href="/register" class="login-checkout float-xs-right">没有账号？去注册</a>
             </form>
         </div>
     </div>
 </div>
+<style>
+
+</style>
