--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
                        autofocus="true" autocomplete="off" maxlength="11">
                 <input type="password" class="form-control" name="password" placeholder="密码"
                        required>
-                <input class="btn btn-primary btn-block" type="submit" value="完成">
+                <input class="btn button-blue btn-block" type="submit" value="完成">
                 <a href="/register" class="login-checkout float-xs-right">没有账号？去注册</a>
             </form>
         </div>
