--- a/views/publish.handlebars
+++ b/views/publish.handlebars
@@ -10,7 +10,7 @@
                 <textarea name="describe" title="描述" class="form-control" cols="30" rows="4"></textarea>
                 <input type="hidden" value="{{user.id}}" name="id">
                 
-                <input class="btn btn-primary btn-block" type="submit" value="完成">
+                <input class="btn button-blue btn-block" type="submit" value="完成">
             </form>
         </div>
     </div>
