--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -12,7 +12,7 @@
                        required>
                 <input type="password" class="form-control" name="password2" placeholder="确认密码"
                        required>
-                <input class="btn btn-primary btn-block" type="submit" value="完成">
+                <input class="btn button-blue btn-block" type="submit" value="完成">
                 <a href="/login" class="login-checkout float-xs-right">已有账号？去登录</a>
             </form>
         </div>
