--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -7,7 +7,7 @@
             <div class="input-group">
                 <input id="content" type="text" class="form-control" placeholder="快递单号查询">
                 <span class="input-group-btn">
-              <button id="submit" class="btn btn-default" type="button">搜索</button>
+              <button id="submit" class="btn button-blue" type="button">搜索</button>
             </span>
             </div>
         </form>
