--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -1,17 +1,58 @@
 <div class="container">
     {{>header}}
     {{>alert}}
-    <div class="row login-box">
-        <div class="login col-lg-4 col-md-6 col-sm-8 col-xs-10">
-            <h4 class="login-header text-center">更新资料</h4>
-            <form action="/login" method="POST" class="login-body" role="form">
-                <input type="text" class="form-control" name="phone" placeholder="手机号" required
-                       autofocus="true" autocomplete="off">
-                <input type="password" class="form-control" name="password" placeholder="密码"
-                       required>
-                <input class="btn btn-primary btn-block" type="submit" value="完成">
-                <a href="/register" class="login-checkout float-xs-right">没有账号？去注册</a>
+    {{# if logistics.finish}}
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <table class="table table-striped table-hover">
+                <thead class="thead-inverse ">
+                <tr>
+                    <th>时间</th>
+                    <th>状态</th>
+                    <!--<th>操作</th>-->
+                </tr>
+                </thead>
+                <tbody>
+                {{# each detail}}
+                    <tr>
+                        <td>{{timeFormat createdAt}}</td>
+                        <td>{{action}}</td>
+                        <!--<td><a class="btn btn-danger btn-sm" href="/admin/update/delete/{{id}}">删除该状态</a></td>-->
+                    </tr>
+                {{/each}}
+                </tbody>
+            </table>
+        </div>
+    {{else}}
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+            <h4 class="text-center">添加物流状态</h4>
+            <form action="/admin/update" method="POST" role="form">
+            <textarea name="action" cols="30" rows="5" title="新状态" class="form-control"
+                      style="margin-bottom: 15px;"></textarea>
+                <input type="hidden" value="{{logistics.id}}" name="id">
+                <input class="btn btn-block button-blue" type="submit" value="添加" style="margin-bottom: 15px;">
+            </form>
+            <form action="/admin/finish" method="POST">
+                <input type="hidden" name="id" value="{{logistics.id}}">
+                <input class="btn btn-block button-blue" type="submit" value="签收" style="margin-bottom: 15px;">
             </form>
         </div>
-    </div>
+        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+            <table class="table table-striped table-hover">
+                <thead class="thead-inverse ">
+                <tr>
+                    <th>时间</th>
+                    <th>状态</th>
+                </tr>
+                </thead>
+                <tbody>
+                {{# each detail}}
+                    <tr>
+                        <td>{{timeFormat createdAt}}</td>
+                        <td>{{action}}</td>
+                    </tr>
+                {{/each}}
+                </tbody>
+            </table>
+        </div>
+    {{/if}}
 </div>
