--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,12 +14,13 @@
     <div class="section">
         <div class="section2">
             <h1>一站式服务</h1>
-            <p><a href="/login" class="login">已有账号？登录</a> / <a href="/register">立即注册</a></p>
+            <p><a href="/login" class="login">已有账号？登录</a> / <a href="/register" style="font-weight: 300;">立即注册</a></p>
         </div>
     </div>
     <div class="section section3">
         <div class="section3">
-            <h1>关于我们</h1>
+            <h1 style="margin-bottom: 30px;">关于我们</h1>
+            <a class="about" href="https://github.com/fengyuanzemin/logistics" target="_blank">github地址</a>
         </div>
     </div>
 </div>
@@ -81,6 +82,7 @@
 
     .section2 .login {
         color: #1478f0;
+        font-weight: 300;
     }
 
     h1 {
@@ -91,4 +93,13 @@
     .search-box input {
         font-weight: 300;
     }
+
+    .about, .about:hover, .about:visited,
+    .about:active, .about:focus {
+        text-decoration: none;
+        font-weight: 300;
+        color: #1478f0;
+        outline: none;
+    }
+
 </style>
