--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,7 +51,7 @@ html, body {
     padding: 15px 0;
 }
 
-/**/
+/*自定义按钮颜色*/
 .button-blue {
     background-image: linear-gradient(90deg, #2db0f9 0%, #1478f0 100%);
     font-weight: 300;
@@ -68,4 +68,13 @@ html, body {
 
 .button-blue:focus {
     outline: none;
+}
+
+/*有a标签包裹的div*/
+.a-container {
+    color: #333333;
+}
+.a-container:hover {
+    color:#333333;
+    text-decoration: none;
 }
