--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,11 +1,14 @@
 <nav class="navbar navbar-light">
     {{#if user}}
         <a class="navbar-brand" href="/admin">主页</a>
-        <ul class="nav navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/admin/publish">发布新物流</a>
-            </li>
-        </ul>
+        {{#if user.admin}}
+        {{else}}
+            <ul class="nav navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/publish">发布新物流</a>
+                </li>
+            </ul>
+        {{/if}}
         <ul class="nav navbar-nav float-xs-right">
             <li class="nav-item">
                 <a class="nav-link" href="/admin/user">{{user.name}}</a>
