--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/tether.min.css">
     <link rel="stylesheet" href="/css/jquery.fullpage.min.css">
+    <link rel="stylesheet" href="/fonts/iconfont.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
