--- a/views/password.handlebars
+++ b/views/password.handlebars
@@ -1,20 +1,17 @@
-<!-- 登录页 -->
 <div class="container">
     {{>header}}
     {{>alert}}
     <div class="row login-box">
-        <div class="login col-lg-4 col-md-6 col-sm-8 col-xs-10">
-            <h4 class="login-header text-center">注册</h4>
-            <form action="/register" method="POST" class="login-body" role="form">
-                <input type="text" class="form-control" name="phone" placeholder="手机号" required
-                       autofocus="true" autocomplete="off" maxlength="11">
+        <div class="login col-lg-4 col-md-6 col-sm-8 col-xs-10" style="padding-bottom: 15px;top:0;">
+            <h4 class="login-header text-center">新密码</h4>
+            <form action="/admin/user/password" method="POST" class="login-body" role="form">
                 <div class="input-container">
                     <input type="password" data-toggle="tooltip" data-placement="left" class="form-control" name="password" placeholder="密码"
                            required title="请不要用真实密码，本网站概不负责">
                     <span class="iconfont icon-unvisible"></span>
                 </div>
+                <input type="hidden" name="id" value="{{user.id}}">
                 <input class="btn button-blue btn-block" type="submit" value="完成">
-                <a href="/login" class="login-checkout float-xs-right">已有账号？去登录</a>
             </form>
         </div>
     </div>
