--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -33,7 +33,7 @@
             </form>
             <form action="/admin/finish" method="POST">
                 <input type="hidden" name="id" value="{{logistics.id}}">
-                <input class="btn btn-block button-blue" type="submit" value="签收" style="margin-bottom: 15px;">
+                <input class="btn btn-block btn-success" type="submit" value="签收" style="margin-bottom: 15px; font-weight: 300;">
             </form>
         </div>
         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
