--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,8 @@
 <div id="fullpage">
     <div class="section">
         <div class="section1">
+            <p class="log"><a href="/login" class="login">已有账号？登录</a> / <a href="/register" class="register">立即注册</a>
+            </p>
             <h1>物流管理信息系统</h1>
             <form action="/search" method="post" class="search-box col-lg-6 col-md-8 col-xs-11 col-sm-10">
                 <div class="input-group">
@@ -25,7 +27,14 @@
     </div>
 </div>
 <script>
-    $('#fullpage').fullpage();
+    $('#fullpage').fullpage({
+        // Navigation
+        menu: '#menu',
+        anchors: ['物流信息管理系统', '一站式服务', '关于我们'],
+        navigation: true,
+        navigationPosition: 'right',
+        navigationTooltips: ['物流信息管理系统', '一站式服务', '关于我们']
+    });
 </script>
 <style>
     /*第一页*/
@@ -38,6 +47,23 @@
         background-image: linear-gradient(0deg, #2DB0F9 0%, #1478F0 100%);
         flex-direction: column;
         position: relative;
+    }
+
+    .section1 .log {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+    }
+
+    .section1 .login,
+    .section1 .register {
+        color: #ffffff;
+        font-weight: 300;
+    }
+
+    .section1 .login:hover,
+    .section1 .register:hover {
+        text-decoration: none;
     }
 
     .section1 h1 {
