--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,7 +4,7 @@
     {{>alert}}
     <div class="row login-box">
         <div class="login col-lg-4 col-md-6 col-sm-8 col-xs-10">
-            <h4 class="login-header text-center">登录</h4>
+            <h4 class="login-header text-center"><span class="iconfont icon-denglu"></span>登录</h4>
             <form action="/login" method="POST" class="login-body" role="form">
                 <input type="text" class="form-control" name="phone" placeholder="手机号" required
                        autofocus="true" autocomplete="off" maxlength="11">
@@ -17,5 +17,10 @@
     </div>
 </div>
 <style>
-
+    .icon-denglu {
+        font-size: 23px;
+        position: relative;
+        top: 0;
+        margin-right: 5px;
+    }
 </style>
