--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -11,7 +11,7 @@
         {{/if}}
         <ul class="nav navbar-nav float-xs-right">
             <li class="nav-item">
-                <a class="nav-link" href="/admin/user">{{user.name}}</a>
+                <a class="nav-link" href="/admin/user">个人中心</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/logout">退出</a>
