--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,7 +74,13 @@ html, body {
 .a-container {
     color: #333333;
 }
+
 .a-container:hover {
-    color:#333333;
+    color: #333333;
     text-decoration: none;
+}
+
+/*验证码*/
+.img-captcha {
+    height: 38px;
 }
