--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,7 +9,13 @@
                 <input type="text" class="form-control" name="phone" placeholder="手机号" required
                        autofocus="true" autocomplete="off" maxlength="11">
                 <input type="password" class="form-control" name="password" placeholder="密码"
-                       required>
+                       required maxlength="14">
+                <div class="row" style="margin-bottom: 15px;">
+                    <div class="col-lg-7 col-md-7 col-sm-7 col-xs-7">
+                        <input type="text" placeholder="验证码" autocomplete="off" name="captcha" maxlength="6" required class="form-control">
+                    </div>
+                    <img src="/captcha" class="col-lg-5 col-md-5 col-sm-5 col-xs-5 img-captcha">
+                </div>
                 <input class="btn button-blue btn-block" type="submit" value="完成">
                 <a href="/register" class="login-checkout float-xs-right">没有账号？去注册</a>
             </form>
@@ -24,3 +30,9 @@
         margin-right: 5px;
     }
 </style>
+<script>
+    $('.img-captcha').click(function (e) {
+        e.stopPropagation();
+        $(this).attr('src', '/captcha?k='+Math.random());
+    });
+</script>
