--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,17 +1,23 @@
 <nav class="navbar navbar-light">
     {{#if user}}
-        <a class="navbar-brand" href="/admin">主页</a>
-        {{#if user.admin}}
-        {{else}}
-            <ul class="nav navbar-nav">
+        <a class="navbar-brand" href="/admin">个人主页</a>
+        <ul class="nav navbar-nav">
+            {{#if user.admin}}
+            {{else}}
                 <li class="nav-item">
                     <a class="nav-link" href="/admin/publish">发布新物流</a>
                 </li>
-            </ul>
-        {{/if}}
+            {{/if}}
+            <li class="nav-item">
+                <a class="nav-link" href="/list">物流列表</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/search">搜索物流</a>
+            </li>
+        </ul>
         <ul class="nav navbar-nav float-xs-right">
             <li class="nav-item">
-                <a class="nav-link" href="/admin/user">个人中心</a>
+                <a class="nav-link" href="/admin/user">个人资料</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/logout">退出</a>
@@ -22,6 +28,9 @@
         <ul class="nav navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="/list">物流列表</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/search">搜索物流</a>
             </li>
         </ul>
         <ul class="nav navbar-nav float-xs-right">
