--- a/views/password.handlebars
+++ b/views/password.handlebars
@@ -7,7 +7,7 @@
             <form action="/admin/user/password" method="POST" class="login-body" role="form">
                 <div class="input-container">
                     <input type="password" data-toggle="tooltip" data-placement="left" class="form-control" name="password" placeholder="密码"
-                           required title="请不要用真实密码，本网站概不负责">
+                           required title="请不要用真实密码，本网站概不负责" autocomplete="off">
                     <span class="iconfont icon-unvisible"></span>
                 </div>
                 <input type="hidden" name="id" value="{{user.id}}">
