--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -11,7 +11,7 @@
                 <div class="input-container">
                     <input type="password" data-toggle="tooltip" data-placement="left" class="form-control"
                            name="password" placeholder="密码" maxlength="14"
-                           required title="请不要用真实密码，本网站概不负责">
+                           required title="请不要用真实密码，本网站概不负责" autocomplete="off">
                     <span class="iconfont icon-unvisible icon-click"></span>
                 </div>
                 <div class="row" style="margin-bottom: 15px;">
