--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -16,7 +16,7 @@
                 <input type="email" class="form-control" name="email" placeholder="修改邮箱" required
                        autocomplete="off" value="{{user.email}}">
                 <input type="hidden" name="id" value="{{user.id}}">
-                <textarea name="address" title="地址" class="form-control" cols="30" rows="4">{{user.address}}</textarea>
+                <textarea name="address" title="地址"  placeholder="修改地址" class="form-control" cols="30" rows="4">{{user.address}}</textarea>
                 <a class="btn btn-info btn-block" href="/admin/user/password" style="font-weight: 300;">修改密码</a>
                 <input class="btn button-blue btn-block" type="submit" value="完成">
             </form>
