--- a/views/password.handlebars
+++ b/views/password.handlebars
@@ -6,7 +6,7 @@
             <h4 class="login-header text-center">新密码</h4>
             <form action="/admin/user/password" method="POST" class="login-body" role="form">
                 <div class="input-container">
-                    <input type="password" data-toggle="tooltip" data-placement="left" class="form-control" name="password" placeholder="密码"
+                    <input type="password" data-toggle="tooltip" data-placement="left" class="form-control" name="password" placeholder="密码,须包含大小写字母和数字"
                            required title="请不要用真实密码，本网站概不负责" autocomplete="off">
                     <span class="iconfont icon-unvisible"></span>
                 </div>
